kubernetes-flux/shared/cache/valkey/app/ciliumnetworkpolicy.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: valkey
  namespace: cache
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: valkey
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "6379"
  egress:
    - {}
